--- a/solshine/build.gradle
+++ b/solshine/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "OWM_API_KEY", openWeatherMapApiKey
     }
     buildTypes {
         release {
